--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,20 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome To SECONDHAND</h1>
-    
+    <div class="row">
+        <div class="column">
+            <a asp-area="" asp-controller="Kategorije" asp-action="Index">
+            <h2>MOŠKI</h2>
+             
+                <img src="https://i.pinimg.com/736x/9e/ad/13/9ead138ddf70a73839efeb982a9d73db.jpg" alt="Moška Oblačila" style="max-width:50%">
+                </a>
+        </div>
+        <div class="column">
+            <a asp-area="" asp-controller="KategorijeZenske" asp-action="Index">
+            <h2>ŽENSKE</h2>
+     
+            <img src="https://assets.vogue.com/photos/6127f6fdad6ce2332569bf44/master/pass/00_story.jpg" alt="Ženska Oblačila" style="max-width:50%">
+            </a>
+        </div>
+    </div>
 </div>
